[package]
name = "shaderpg"
version = "0.1.0"
authors = ["Overpeek <overpeek.fin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
cgmath = { version = "~0.18", features = ["swizzle"] }
env_logger = "~0.8"
parking_lot = "~0.11"
shaderc = "~0.7"
gears = { git = "https://github.com/Overpeek/gears", branch = "main", features = [ "short_namespaces" ] }
gears-traits = { git = "https://github.com/Overpeek/gears", branch = "main" }
gears-pipeline = { git = "https://github.com/Overpeek/gears", branch = "main" }